Cambio otra vez boton formulario

--- a/src/html/formulario.html
+++ b/src/html/formulario.html
@@ -73,7 +73,7 @@
          </p>
         </fieldset>
        
-        <input class="boton" id="enviar" type="submit" value="Enviar" onclick="enviado.html">
+        <input class="boton" id="enviar" type="submit" value="Enviar" onclick="location:href=enviado.html">
         <a class="boton" href="formulario.html">Resetear</a>
         <br>
         <a class="boton" id="volver" href="index.html">Volver a la página principal</a>
